# openstar-Image-cropping

./: .gitignore  Cargo.toml  README.md  build.bat  package.json  run-watch.bat  run.bat  setup.ps1
.github/workflows/: release.yml
src/: app.rs  icons.rs  image_splitter.rs  main.rs
