[package]
name = "batch-image-splitter"
version = "1.0.0"
edition = "2021"
authors = ["Your Name"]
description = "批量图片分割工具 - Rust版本"

[dependencies]
# GUI框架
egui = "0.28"
eframe = { version = "0.28", default-features = false, features = ["default_fonts", "glow"] }

# 图像处理
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "bmp", "gif"] }

# 并行处理
rayon = "1.10"

# 文件对话框
rfd = "0.14"

# 错误处理
anyhow = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[build-dependencies]
winres = "0.1"
